# opendataloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPLIT_ENVS.md  docker-compose.yml  main.py  pyproject.doc.toml  pyproject.toml  test.py  test_pp.py
native_table_detector/: Dockerfile  Makefile  README.md  detector.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_detector.py
native_table_detector/configs/: default.yaml  dev.yaml
native_table_detector/docs/: architecture.md
native_table_detector/scripts/: run_pipeline.py  test_ocr_page.py
native_table_detector/src/: __init__.py
native_table_detector/src/core/: detector.py
native_table_detector/src/pipeline/: __init__.py  config.py  contracts.py  exceptions.py  factory.py  orchestrator.py
native_table_detector/src/processors/: __init__.py  hybrid_processor.py  merge_results.py  paddle_ocr_processor.py  paddle_ocr_table_processor.py
native_table_detector/src/stages/: __init__.py  stage1_odl.py  stage2_rotation.py  stage3_ocr.py  stage4_merge.py
native_table_detector/src/utils/: __init__.py  io.py  logging.py  retry.py  validation.py
native_table_detector/tests/: __init__.py  conftest.py
output/: tet_fixed.html  tet_fixed.json  tet_rotated.html  tet_rotated.json  tet_rotated.md
results/: manifest.json
scripts/: preload_models.py  run_doc_env_python.sh  run_env_python.sh  run_pipeline.py  run_ui.sh  run_ui_ocr.sh  setup_env.sh  setup_split_envs.sh
src/configs/: prod.yaml
src/core/: __init__.py
src/pipeline/: __init__.py  config.py  contracts.py  orchestrator.py
src/stages/: stage1_odl.py  stage2_rotation.py
tests/: __init__.py
tests/unit/: test_detector.py  test_hybrid_processor.py
ui/: __init__.py  app.py  common.py
ui/services/: __init__.py  gateway_service.py  pipeline_service.py
(+12 files in other folders)
