[project]
name = "opendataloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gradio==4.44.0",
    "gradio-client==1.3.0",
    "fastapi==0.112.2",
    "starlette==0.38.6",
    "pydantic==2.10.6",
    "imgaug==0.4.0",
    "layoutparser[layoutmodels,tesseract]==0.3.4",
    "opencv-python==4.9.0.80",
    "paddleocr==2.7.0.3",
    "paddlex==3.0.0",
    "paddlepaddle-gpu==2.6.1",
    "pyclipper==1.3.0.post5",
    "pymupdf==1.24.9",
    "pytest==8.3.2",
    "scikit-image==0.22.0",
    "shapely==2.0.4",
    "setuptools>=70",
    "torch==2.1.2",
    "torchvision==0.16.2",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'linux' and python_version == '3.10' and platform_machine == 'x86_64'"]
override-dependencies = [
    "opencv-python==4.9.0.80",
    "pymupdf==1.24.9",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
paddlepaddle-gpu = { index = "paddle-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "paddle-cu118"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true